--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <h1>Hello.</h1>
     
     <h1>My first Heading</h1>
-    <img src="flower.jpg" alt="whiteflower" width="100" height="100"></img>
+    <img src="https://www.w3schools.com/images/w3schools_green.jpg" alt="W3Schools.com">
  
    
     <p>My first paragraph</p>
